# localai-orchestrator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  stack.toml
docs/: CLI.md  COMPUTER_VISION_UPGRADE_PATH.md  MODEL_ADMIN.md  NETWORKING.md  OPERATIONS.md  STACK_CONFIGURATION.md
image_gen/: Dockerfile  app.py  requirements.txt
localai/: cli.py  config.py  docker.py  health.py  macos.py  shell.py  tuning.py
model_admin/: Dockerfile  app.py
searxng/: settings.yml
tests/: test_cli_benchmark.py  test_cli_up_flags.py  test_cli_vision.py  test_config_vision_image_gen.py  test_model_admin_endpoints.py
tests/fixtures/vision/: smoke.jsonl
