[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localai-orchestrator"
version = "0.1.8"
description = "macOS-first LocalAI orchestrator for native Ollama + Docker services"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LocalAI" }]

[project.scripts]
localai = "localai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["localai*"]
